--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.7e96c414.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.141661d3.js">
+    <link rel="stylesheet" href="/assets/index.b79d244c.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
   </body>
 </html>
