--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/vue3-vite-starter/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.7e96c414.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.141661d3.js">
-    <link rel="stylesheet" href="/assets/index.b79d244c.css">
+    <script type="module" crossorigin src="/vue3-vite-starter/assets/index.7e96c414.js"></script>
+    <link rel="modulepreload" href="/vue3-vite-starter/assets/vendor.141661d3.js">
+    <link rel="stylesheet" href="/vue3-vite-starter/assets/index.b79d244c.css">
   </head>
   <body>
     <div id="app"></div>
